[Material Refresh] Separator blend from 43% to 30% per comment in bug.

Bug: 859620
Change-Id: I57b73343549028053aa5833587e28782815971c9
Reviewed-on: https://chromium-review.googlesource.com/1125127
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572347}
Former-commit-id: 0b284c23430831b033293d14c000108e6e4b50b6